--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.45",
+    "sortablejs": "^1.13.0",
     "vue": "^3.0.11",
     "vue-router": "^4.0.8",
-    "vue3-qrcode-reader": "0.0.1"
+    "vue3-qrcode-reader": "0.0.1",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
