--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.45",
     "sortablejs": "^1.13.0",
     "vue": "^3.0.11",
+    "vue-draggable-next": "^2.0.1",
     "vue-router": "^4.0.8",
-    "vue3-qrcode-reader": "0.0.1",
-    "vuedraggable": "^2.24.3"
+    "vue3-clipboard": "^1.0.0",
+    "vue3-qrcode-reader": "0.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
